tests/invalid_typecheck/test_tc_sub_right_bool.aphi
/*
Type-check error: Invalid operand for '-' (expected int, got bool).
Right operand of '-' is bool.
*/

int x;
bool b;
int r;

procedure main {
    x = 10;
    b = false;
    r = x - b;
}
